--- a/package.json
+++ b/package.json
@@ -9,9 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/localizations": "^2.0.0",
+    "@clerk/nextjs": "^5.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@smastrom/react-rating": "^1.5.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
+    "lucide-react": "^0.371.0",
+    "moment": "^2.30.1",
+    "next": "14.2.2",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.2"
+    "sonner": "^1.4.41",
+    "tailwind-merge": "^2.2.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "postcss": "^8",
